--- a/_config.yml
+++ b/_config.yml
@@ -76,7 +76,7 @@ theme_mode: # [light | dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: <img src="C:\users\home\pictures\IDPIC.jpg"/>
+avatar: https://media.licdn.com/dms/image/D5603AQExFUf-ALhMLQ/profile-displayphoto-shrink_800_800/0/1678759194935?e=2147483647&v=beta&t=0J1sH83ru_2owjm52FFV_Yl8NsBj0aaM9CSuMyFc3vg
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
