--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
   name: Alisha Parmar
-  email: alisha.parmar14@gmail.com# change to your email address
+  email: alisha.parmar14@gmail.com
   links:
     # The first element serves as the copyright owner's link
     - https://www.linkedin.com/in/alisha-parmar-a362811bb/
