--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,8 @@ url: "https://alishaparmar11.github.io"
 
 github:
   username: alishaparmar11 # change to your github username
+twitter:
+  username: twitter_username # change to your twitter username
 
 social:
   # Change to your full name.
