--- a/_config.yml
+++ b/_config.yml
@@ -14,12 +14,12 @@ timezone: America/Edmonton
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: KNES 381 Final Project # the main title
+title: Website Coding  # the main title
 
 tagline: Welcome! # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  This is my KNES 381 Final Project
+  This is a website I coded through the use of a jekyll theme via github.
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
