--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ title: Website Coding  # the main title
 tagline: Welcome! # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  This is a website I coded through the use of a jekyll theme via github.
+  This is a website I coded through the use of a jekyll theme via github. More specifically, the main coding languages I used were Markdown and HTML. Any graphs made were created by a Python code.
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
@@ -76,7 +76,7 @@ theme_mode: # [light | dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: https://media.licdn.com/dms/image/D5603AQFxEJLoSVu92A/profile-displayphoto-shrink_200_200/0/1712189433866?e=1717632000&v=beta&t=ZZChAbHLuCdSVsFGMG5JnnpjN1dtJ89bADKTHsvoWUw
+avatar: https://media.licdn.com/dms/image/v2/D5603AQG9tl56Uvay6g/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1714099175318?e=1733356800&v=beta&t=Ap7MJY-BZ42DgobX5M-Q_8bBV2jheoHuUC_IMRmTaTY
 # https://media.licdn.com/dms/image/D5603AQGyzz_mfw4k0w/profile-displayphoto-shrink_200_200/0/1711759144658?e=1717632000&v=beta&t=eQ0kfbzj9MbOs9JXwKp6ILRGKt66_iib8_Wl47whx8g
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
