--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone: America/Edmonton
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Alisha Parmar Live Resume and Cover Letter  # the main title
+title: Live Resume and Cover Letter  # the main title
 
 tagline: Welcome! # it will display as the sub-title
 
