--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ tagline: Welcome! # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
  
-This is a website I created while learning how to code. To integrate my work, I used Version Control. The main coding languages used throughout the websites were MarkDown and HTML. All graphs were created from a Python code. Posts on this website include my resume, cover letter, an essay I wrote using LaTeX, Microsoft Excel Analysis and a brief video analysis.# Fill in the protocol & hostname for your site.
+This is a website I created while learning how to code. To integrate my work, I used Version Control. The main coding languages used throughout the websites were MarkDown and HTML. All graphs were created from a Python code. Posts on this website include my resume, an essay I wrote using LaTeX, Microsoft Excel Analysis and a brief video analysis.# Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
 url: "https://alishaparmar11.github.io"
 
